--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>net.bluemix</groupId>
 			<artifactId>bluemix-cloud-connectors-cloudfoundry</artifactId>
-			<version>0.0.3-SNAPSHOT</version>
+			<version>0.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -45,16 +45,6 @@
 			<version>6.3.0</version>
 		</dependency>	
 	</dependencies>
-	<repositories>
-		<repository>
-		<id>ossrh-snapshots</id>
-		<name>OSSRH Snapshots</name>
-		<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		<snapshots>
-			<enabled>true</enabled>
-		</snapshots>
-		</repository>
-  </repositories>
 
 	<build>
 		<plugins>
